[package]
name = "scape-p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-json = "46.0.0"
dotenv = "0.15.0"
polar = "0.0.0"
polars = { version = "0.32.1", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12.0"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
